--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,39 @@ li {
   list-style-type: none;
 ;}
 
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--yellowish)
+}
+
+#cv .row {
+  max-width: 960px;
+  margin: auto;
+}
+
+
+#portafolio a {
+  color: var(--yellowish);
+  text-decoration: none;
+}
+
+#portafolio .row {
+  max-width: 1280px;
+  margin: auto;
+}
+
+#header {
+  height: calc(100vh - 50px);
+  background-image: url(/assets/img/bg.jpg);
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-color: #223;
+}
+
 .bg-theme {
   background-color: var(--background-color);
 }
@@ -44,17 +77,11 @@ li {
   color: var(--contrast-color)
 }
 
-#header {
-  height: calc(100vh - 50px);
-  background-image: url(/assets/img/bg.jpg);
-  background-size: cover;
-  background-blend-mode: overlay;
-  background-color: #223;
+.card {
+  background-color: var(--background-color-tertiary);
+  color: var(--contrast-color);
 }
 
-/*
-  Bootstrap classes modification
-*/
 .nav-link:hover {
   color: var(--yellowish);
 }
