--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
   background-color: var(--background-color);
   color: var(--foreground-color);
   font-family: Montserrat, sans-serif;
+  line-height: 1.4;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -39,6 +40,9 @@ a:hover {
   max-width: 960px;
   margin: auto;
 }
+
+#cv div.container {
+  max-width: 760px;}
 
 
 #portafolio a {
