--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,29 +28,35 @@ button {
   --royal-blue: #1a2b6d;
   --berkeley-blue: #003059;
   --orange-pantone: #ff6200;
+  --fairy-salt: #fae1f5;
   --xanthous: #fcbf49;
   --vanilla: #eae2b7;
+  --light-cyan: #E1FAF9;
 
   /* Neutrals */
   --white: #fcfcfd;
-  --light-gray: #c7c7c8;
-  --soft-black: #323233;
+  --light-gray: #d7d7d8;
+  --gray: #bbb;
+  --soft-black: #424243;
   --black: #101011;
 
   /* Semantic variables*/
   --background-color-primary: var(--white);
-  --background-color-secondary: var(--vanilla);
+  --background-color-secondary: var(--light-gray);
   --text-color-primary: var(--black);
   --text-color-secondary: var(--soft-black);
   --primary-color: var(--royal-blue);
   --secondary-color: var(--berkeley-blue);
   --accent-color: var(--orange-pantone);
   --highlight-color: var(--xanthous);
+
+  /* Transparents */
+  --transparent-white: #fcfcfd90;
 }
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 45px;
+  /* TODO Update with JS */
 }
 
 body {
@@ -72,19 +78,29 @@ a:hover {
   color: var(--yellowish);
 }
 
-.min-height {
-  height: calc(100vh);
+.column-container {
+  margin: auto;
+  width: 80vw;
+  background-color: var(--background-color-primary);
 }
 
 #navbar {
-  font-size: 1.25rem;
+  font-size: 1em;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  border-bottom: 1px dashed var(--black);
-  background: var(--white);
   position: sticky;
+  gap: 0;
   top: 0;
+  padding: .5rem 0;
+  /* border-bottom: 1px solid var(--light-gray); */
+  background-color: none;
+}
+
+.nav-navigation {
+  display: flex;
+  place-content: center;
+  gap: 0;
 }
 
 .nav-toggle {
@@ -92,19 +108,51 @@ a:hover {
 }
 
 .navbar-item {
-  padding: 0.5rem 1.5rem;
-  border-left: 1px dashed var(--black);
+  padding: .75rem 2rem;
   display: inline-block;
-  scroll-margin-top: 30px;
   scroll-behavior: smooth;
+  background-color: var(--light-gray);
+  border: 1px solid var(--gray);
+  border-left: none;
+  border-right: none;
 }
 
 .navbar-item:first-child {
-  border: none;
+  border-radius: 2rem 0 0 2rem;
 }
 
 .navbar-item:last-child {
-  border-right: 1px dashed var(--black);
+  border-radius: 0 2rem 2rem 0;
+}
+
+.navbar-item:hover {
+  background-color: var(--orange-pantone);
+  color: var(--white);
+}
+
+/* Styling by section*/
+
+#header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100vh;
+  width: clamp(476px, 100vw, 1920px);
+  margin: 0 auto;
+  padding: 0 clamp(1rem, 5vw, 8rem);
+  background-size: cover;
+  color: var(--orange-pantone);
+
+  & .header-content {
+    text-align: left;
+    font-size: 225%;
+  }
+
+  & #minombre {
+    font-size: 9vw;
+    font-weight: 700;
+  }
+
 }
 
 #cv .row {
@@ -118,41 +166,38 @@ a:hover {
 
 #portfolio {
   margin: auto;
-  padding: 1rem;
-}
-
-#portfolio img {
-  max-width: 100%;
-  max-height: 59vh;
 }
 
 .project-container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  gap: 3rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 30vh 30vh;
+  gap: 1rem;
+  font-family: sans-serif;
 }
 
 .project-card {
-  width: 40%;
-  min-width: 400px;
-}
-section > h2 {
-  font-size: 3rem;
-}
-
-#header {
+  width: 30vw;
+  aspect-ratio: 4/3;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: clamp(476px, 100vw, 1920px);
-  margin: 0 auto;
-  padding: clamp(1rem, 3vw, 4rem) clamp(1rem, 5vw, 8rem);
-  background-size: cover;
-  background-color: var(--background-color-primary);
+  flex-direction: column;
+  place-items: center;
+
+  & img {
+    height: 100%;
+    aspect-ratio: 4 / 3;
+    object-fit: cover;
+  }
 }
 
-#header > .header-content {
-  text-align: left;
-  font-size: 225%;
+section {
+  min-height: 100vh;
+  margin: auto;
+  padding: 1rem;
+  padding-top: 63px;
+  background: var(--background-color-secondary);
+  overflow: hidden;
+  & h2 {
+    display: none;
+  }
 }
