--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,17 @@ button {
   --text-color-primary: var(--black);
   --text-color-secondary: var(--dark-gray);
 
+/* Font sizing */
+/* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,20,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+  --step--2: clamp(0.6944rem, 0.6913rem + 0.0157vw, 0.7035rem);
+  --step--1: clamp(0.8333rem, 0.797rem + 0.1816vw, 0.9377rem);
+  --step-0: clamp(1rem, 0.913rem + 0.4348vw, 1.25rem);
+  --step-1: clamp(1.2rem, 1.0378rem + 0.8109vw, 1.6663rem);
+  --step-2: clamp(1.44rem, 1.1683rem + 1.3585vw, 2.2211rem);
+  --step-3: clamp(1.728rem, 1.2992rem + 2.1439vw, 2.9607rem);
+  --step-4: clamp(2.0736rem, 1.4221rem + 3.2575vw, 3.9467rem);
+  --step-5: clamp(2.4883rem, 1.5239rem + 4.8219vw, 5.2609rem);
 }
 
 html {
@@ -125,10 +136,10 @@ a:hover {
 #header {
   background-color: var(--background-color-primary);
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 100vh;
-  width: clamp(476px, 100vw, 1920px);
+  width: clamp(320px, 100vw, 1920px);
   margin: 0 auto;
   padding: 0 clamp(1rem, 5vw, 8rem);
   background-size: cover;
@@ -136,19 +147,25 @@ a:hover {
 
   & .header-content {
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
 
   & #header-body {
-    font-size: 1.5rem;
+    font-size: var(--step-1);
+    color: var(--text-color-secondary)
   }
 
   & h1 {
-    font-size: 2rem;
+    font-size: var(--step-5);
     font-weight: 700;
+    line-height: 1.2;
   }
 
-  & #minombre {
-    font-size: clamp(2rem, 4vw, 4rem);
+  & #header-nombre {
+    font-size: var(--step-3);
     font-weight: 900;
     text-transform: uppercase;
   }
