--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,13 @@ button {
 :root {
   /* Cool grayscale colors */
   --white: #fbfbfe;
+  --off-white: #efeff3;
   --light-gray: #e5e5e7;
   --soft-gray:#d0d0d2;
   --mid-gray: #b0b0b2;
   --dark-gray: #404042;
   --black: #19191c;
+  --transparent-white: #fbfbfecc;
 
   /* Semantic variables*/
   --background-color-primary: var(--white);
@@ -38,8 +40,9 @@ button {
   --text-color-primary: var(--black);
   --text-color-secondary: var(--dark-gray);
 
-/* Font sizing */
-/* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,20,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+  /* Font sizing */
+  /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,20,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
 
   --step--2: clamp(0.6944rem, 0.6913rem + 0.0157vw, 0.7035rem);
   --step--1: clamp(0.8333rem, 0.797rem + 0.1816vw, 0.9377rem);
@@ -78,11 +81,10 @@ a:hover {
   color: var(--yellowish);
 }
 
-.column-container {
-  margin: auto;
-  width: 80vw;
-  background-color: var(--background-color-primary);
-}
+h2 {
+  font-size: var(--step-3);
+  margin-bottom: .75em;
+;}
 
 #navbar {
   font-size: 1em;
@@ -93,8 +95,8 @@ a:hover {
   gap: 0;
   top: 0;
   padding: 0.5rem 0;
-  /* border-bottom: 1px solid var(--light-gray); */
-  background-color: none;
+  background-color: var(--transparent-white);
+  backdrop-filter: blur(15px);
 }
 
 .nav-navigation {
@@ -132,13 +134,14 @@ a:hover {
 }
 
 /* Styling by section*/
+/* Header */
 
 #header {
   background-color: var(--background-color-primary);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100svh;
   width: clamp(320px, 100vw, 1920px);
   margin: 0 auto;
   padding: 0 clamp(1rem, 5vw, 8rem);
@@ -171,6 +174,60 @@ a:hover {
   }
 }
 
+/* Portfolio */
+
+#portfolio {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.project-grid {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5em;
+  font-family: sans-serif;
+}
+
+.portfolio-container {
+  height: 100%;
+  width: clamp(320px, 100%, 1140px);
+  margin: 0 auto;
+  background-color: var(--off-white);
+  padding: 1.5em 3em;
+  border-radius: .5em;
+}
+
+.project-card {
+  aspect-ratio: 4/3;
+  display: flex;
+  gap: 1em;
+  flex-direction: column;
+  place-items: center;
+  background-color: var(--white);
+  border: 1px solid rgba(0,0,0,.07);
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  border-radius: 4px;
+  padding: 1em;
+
+  & img {
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    object-fit: cover;
+    border-radius: 4px;
+  }
+}
+
+section {
+  height: 100svh;
+  width: 100vw;
+  padding-top: 63px;
+  background: var(--background-color-secondary);
+  overflow: hidden;
+}
+
+/* CV Section */
+
 #cv .row {
   max-width: 960px;
   margin: auto;
@@ -180,40 +237,12 @@ a:hover {
   max-width: 760px;
 }
 
-#portfolio {
-  margin: auto;
-}
-
-.project-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 30vh 30vh;
-  gap: 1rem;
-  font-family: sans-serif;
-}
-
-.project-card {
-  width: 30vw;
-  aspect-ratio: 4/3;
-  display: flex;
-  flex-direction: column;
-  place-items: center;
-
-  & img {
-    height: 100%;
-    aspect-ratio: 4 / 3;
-    object-fit: cover;
+@media (max-width:576px) {
+  .project-grid {
+  grid-template-columns: 1fr;
   }
-}
 
-section {
-  min-height: 100vh;
-  margin: auto;
-  padding: 1rem;
-  padding-top: 63px;
-  background: var(--background-color-secondary);
-  overflow: hidden;
-  & h2 {
-    display: none;
+  .portfolio-container {
+    padding: .5em 1em;
   }
 }
