--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ button {
   --mid-gray: #b0b0b2;
   --dark-gray: #404042;
   --black: #19191c;
-  --transparent-white: #fbfbfecc;
+  --transparent-white: #fbfbfee0;
 
   /* Semantic variables*/
   --background-color-primary: var(--white);
@@ -86,13 +86,14 @@ h2 {
   margin-bottom: .75em;
 ;}
 
+/* Navbar */
+
 #navbar {
   font-size: 1em;
   display: flex;
   justify-content: center;
   align-items: center;
   position: sticky;
-  gap: 0;
   top: 0;
   padding: 0.5rem 0;
   background-color: var(--transparent-white);
@@ -102,7 +103,7 @@ h2 {
 .nav-navigation {
   display: flex;
   place-content: center;
-  gap: 0;
+  gap: .5em;
 }
 
 .nav-toggle {
@@ -110,27 +111,43 @@ h2 {
 }
 
 .navbar-item {
-  padding: 0.75rem 2rem;
+  position: relative;
+  padding: 0.75em 1.5em;
   display: inline-block;
   scroll-behavior: smooth;
-  /* background-color: var(--light-gray); */
+  text-align: center;
   border: 1px solid var(--gray);
   border-left: none;
   border-right: none;
-  transition: background-color ease 250ms;
+  border-radius: 4px;
+  transition: all ease 250ms;
+  font-weight: 500;
 }
 
-.navbar-item:first-child {
-  border-radius: 2rem 0 0 2rem;
-}
-
-.navbar-item:last-child {
-  border-radius: 0 2rem 2rem 0;
+.navbar-item::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  width: 0%;
+  height: 2px;
+  background: slateblue;
+  transition: width 250ms ease;
+  transform: translateX(-50%);
 }
 
 .navbar-item:hover {
-  background-color: var(--dark-gray);
-  color: var(--light-gray);
+  color: slateblue;
+}
+
+.navbar-item:hover::after {
+  width: 120%;
+  transform: translateX(-50%);
+}
+
+.active {
+  background-color: white;
+  border: 1px solid var(--background-color-secondary);
 }
 
 /* Styling by section*/
