--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,18 +28,22 @@ button {
   --white: #fbfbfe;
   --off-white: #efeff3;
   --light-gray: #e5e5e7;
-  --soft-gray:#d0d0d2;
+  --soft-gray: #d0d0d2;
   --mid-gray: #b0b0b2;
   --dark-gray: #404042;
   --black: #19191c;
+  --slate-blue: #5a4ba8; 
+  --light-slate-blue: #a18edf;
   --transparent-white: #fbfbfee0;
+  --transparent-off-white: #efeff3e0;
 
   /* Semantic variables*/
   --background-color-primary: var(--white);
   --background-color-secondary: var(--light-gray);
   --text-color-primary: var(--black);
   --text-color-secondary: var(--dark-gray);
-
+  --accent-color: var(--slate-blue);
+  --accent-color-light: var(--light-slate-blue);
 
   /* Font sizing */
   /* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1240,20,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
@@ -83,8 +87,8 @@ a:hover {
 
 h2 {
   font-size: var(--step-3);
-  margin-bottom: .75em;
-;}
+  margin-bottom: 0.75em;
+}
 
 /* Navbar */
 
@@ -95,15 +99,15 @@ h2 {
   align-items: center;
   position: sticky;
   top: 0;
-  padding: 0.5rem 0;
-  background-color: var(--transparent-white);
+  background-color: var(--transparent-off-white);
   backdrop-filter: blur(15px);
+  padding: 0.375rem 0;
 }
 
 .nav-navigation {
   display: flex;
   place-content: center;
-  gap: .5em;
+  gap: 0.5em;
 }
 
 .nav-toggle {
@@ -112,7 +116,7 @@ h2 {
 
 .navbar-item {
   position: relative;
-  padding: 0.75em 1.5em;
+  padding: 0.75em 2em;
   display: inline-block;
   scroll-behavior: smooth;
   text-align: center;
@@ -120,45 +124,44 @@ h2 {
   border-left: none;
   border-right: none;
   border-radius: 4px;
-  transition: all ease 250ms;
+  background-color: inherit;
+  transition: background-color ease 500ms;
   font-weight: 500;
 }
 
 .navbar-item::after {
-  content: "";
+  content: '';
   position: absolute;
   left: 50%;
-  bottom: -2px;
+  bottom: 6px;
   width: 0%;
-  height: 2px;
-  background: slateblue;
-  transition: width 250ms ease;
+  height: 1px;
+  background: var(--accent-color-light);
+  transition: width ease 200ms;
   transform: translateX(-50%);
 }
 
 .navbar-item:hover {
-  color: slateblue;
+  color: var(--accent-color);
 }
 
 .navbar-item:hover::after {
-  width: 120%;
+  width: 60%;
   transform: translateX(-50%);
 }
 
-.active {
-  background-color: white;
-  border: 1px solid var(--background-color-secondary);
+.navbar-item.active {
+  background-color: var(--white);
 }
 
 /* Styling by section*/
 /* Header */
 
-#header {
+#hero {
   background-color: var(--background-color-primary);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100svh;
   width: clamp(320px, 100vw, 1920px);
   margin: 0 auto;
   padding: 0 clamp(1rem, 5vw, 8rem);
@@ -175,7 +178,7 @@ h2 {
 
   & #header-body {
     font-size: var(--step-1);
-    color: var(--text-color-secondary)
+    color: var(--text-color-secondary);
   }
 
   & h1 {
@@ -212,7 +215,7 @@ h2 {
   margin: 0 auto;
   background-color: var(--off-white);
   padding: 1.5em 3em;
-  border-radius: .5em;
+  border-radius: 0.5em;
 }
 
 .project-card {
@@ -222,7 +225,7 @@ h2 {
   flex-direction: column;
   place-items: center;
   background-color: var(--white);
-  border: 1px solid rgba(0,0,0,.07);
+  border: 1px solid rgba(0, 0, 0, 0.07);
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   border-radius: 4px;
   padding: 1em;
@@ -235,12 +238,12 @@ h2 {
   }
 }
 
-section {
-  height: 100svh;
+.section {
+  min-height: 100svh;
   width: 100vw;
   padding-top: 63px;
-  background: var(--background-color-secondary);
   overflow: hidden;
+  background-color: var(--background-color-secondary);
 }
 
 /* CV Section */
@@ -254,12 +257,12 @@ section {
   max-width: 760px;
 }
 
-@media (max-width:576px) {
+@media (max-width: 576px) {
   .project-grid {
-  grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 
   .portfolio-container {
-    padding: .5em 1em;
+    padding: 0.5em 1em;
   }
 }
