--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ button {
   /* Cool grayscale colors */
   --white: #fbfbfe;
   --off-white: #efeff3;
-  --light-gray: #e5e5e7;
+  --light-gray: #e7e7e9;
   --soft-gray: #d0d0d2;
   --mid-gray: #b0b0b2;
   --dark-gray: #404042;
@@ -39,7 +39,8 @@ button {
 
   /* Semantic variables*/
   --background-color-primary: var(--white);
-  --background-color-secondary: var(--light-gray);
+  --background-color-secondary: var(--off-white);
+  --background-color-tertiary: var(--light-gray);
   --text-color-primary: var(--black);
   --text-color-secondary: var(--dark-gray);
   --accent-color: var(--slate-blue);
@@ -122,19 +123,18 @@ h2 {
   border-right: none;
   border-radius: 4px;
   background-color: inherit;
-  transition: background-color ease 500ms;
-  font-weight: 500;
+  transition: box-shadow 500ms ease, background-color 500ms ease;
 }
 
 .navbar-item::after {
   content: '';
   position: absolute;
   left: 50%;
-  bottom: 6px;
+  bottom: 5px;
   width: 0%;
-  height: 1px;
+  height: 2px;
   background: var(--accent-color-light);
-  transition: width ease 200ms;
+  transition: width ease-in 250ms;
   transform: translateX(-50%);
 }
 
@@ -149,6 +149,7 @@ h2 {
 
 .navbar-item.active {
   background-color: var(--white);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 /* Styling by section*/
@@ -239,14 +240,16 @@ h2 {
 /* Skills */
 
 #skills {
-  background-color: var(--background-color-primary);
-  & li {
-    margin: .5em 0;
-  }
+  background-color: var(--background-color-tertiary);
 
   & h3 {
     text-align: center;
-    margin: 1em 0;}
+    margin: 2em 0;}
+
+  & svg {
+    height: 3em;
+    width: 3em;
+  }
 }
 
 .skill-list-container {
@@ -259,8 +262,8 @@ h2 {
    ;
   gap: 1em;
   justify-content: space-between;
-  width: 90%;
-  font-size: var(--step-0);
+  width: clamp(411px, 90%, 1140px);
+  font-size: var(--step--1);
   color: var(--text-color-secondary);
 }
 
@@ -278,6 +281,27 @@ h2 {
 
 #other-section {
   grid-area: d;
+}
+
+.skill-card-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  gap: .75em;
+}
+
+.skill-card {
+  aspect-ratio: 1 / 1;
+  width: 7em;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  gap: .5em;
+  padding: 0.75em;
+  background-color: var(--background-color-secondary);
+  box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
 }
 
 /* CV Section */
