--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,8 @@ h2 {
 
 .navbar-item.active {
   background-color: var(--white);
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 /* Styling by section*/
@@ -226,7 +227,8 @@ h2 {
 }
 
 .section {
-  min-height: 100svh;
+  /* TODO Fix magic navbar height number */
+  height: calc(100svh - 58px);
   width: 100vw;
   overflow: hidden;
   display: flex;
@@ -240,11 +242,13 @@ h2 {
 /* Skills */
 
 #skills {
+  justify-content: flex-start;
   background-color: var(--background-color-tertiary);
 
   & h3 {
     text-align: center;
-    margin: 2em 0;}
+    margin: 2em 0;
+  }
 
   & svg {
     height: 3em;
@@ -252,17 +256,17 @@ h2 {
   }
 }
 
-.skill-list-container {
+.skills-grid {
+  /* height: 70svh; */
   display: grid;
-  /* grid-auto-flow: column; */
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: 
-   "a b c"
-   "a b d"
-   ;
-  gap: 1em;
-  justify-content: space-between;
-  width: clamp(411px, 90%, 1140px);
+  grid-template-columns: 1fr 1fr 2fr;
+  grid-auto-rows: auto;
+  grid-template-areas:
+    'a b c'
+    'a b d';
+  justify-content: center;
+  width: clamp(360px, 90%, 900px);
+  gap: 3em;
   font-size: var(--step--1);
   color: var(--text-color-secondary);
 }
@@ -284,30 +288,35 @@ h2 {
 }
 
 .skill-section {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
 }
 
 .skill-card-container {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  gap: .75em;
-  width: 100%;
+  align-items: flex-start;
+  gap: 0.75em;
+}
+
+.skill-card-container.vertical {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  max-height: 100%;
 }
 
 .skill-card {
   aspect-ratio: 1 / 1;
-  width: 6em;
-  display:flex;
+  padding: auto;
+  width: 6rem;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  gap: .5em;
-  padding: 0.75em;
+  gap: 0.5em;
   background-color: var(--background-color-secondary);
   box-shadow: rgba(149, 157, 165, 0.15) 0px 8px 24px;
 }
@@ -323,11 +332,32 @@ h2 {
   max-width: 760px;
 }
 
+@media (max-width: 911px) {
+}
+
 @media (max-width: 576px) {
   .project-grid {
     grid-template-columns: 1fr;
   }
+
+  .section {
+    height: auto;
+    /* TODO Fix magic navbar height number */
+    min-height: calc(100svh - 40px);
+  }
+
+  .skills-grid {
+    grid-template-columns: 2fr;
+    grid-template-areas: unset;
+  }
+
+  .skills-section {
+    flex-direction: row;
+  }
+  #frontend-section,
+  #backend-section,
+  #languages-section,
+  #other-section {
+    grid-area: unset;
+  }
 }
-
-/* Icons */
-
