--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ button {
   --light-gray: #e7e7ea;
   --soft-gray: #d0d0d3;
   --mid-gray: #a0a0a3;
-  --dark-gray: #878789;
+  --dark-gray: #777779;
   --black-gray: #404042;
   --black: #19191c;
   --slate-blue: #5a4ba8;
@@ -66,7 +66,7 @@ button {
   --page-width-wide: clamp(360px, 95%, 1200px);
   --page-width-constrained: clamp(360px, 95%, 900px);
   --fluid-spacing: clamp(1rem, 5vw, 3rem);
-  --tight-spacing: clamp(.5rem, 2.5vw, 1.5rem);
+  --tight-spacing: clamp(0.5rem, 2.5vw, 1.5rem);
 }
 
 html {
@@ -239,14 +239,14 @@ h2 {
 
 .section {
   /* TODO Fix magic navbar height number */
-  height: calc(100svh - 58px);
+  min-height: calc(100svh - 58px);
   width: 100vw;
   overflow: hidden;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  padding: 0;
+  padding: var(--fluid-spacing) 0;
   scroll-margin-top: 57px;
 }
 
@@ -337,9 +337,13 @@ h2 {
   background-color: var(--background-color-secondary);
 
   & h3 {
-    font-size: var(--step-1);
+    font-size: var(--step-2);
     text-align: center;
-    margin: 0.75em;
+    margin: 0.5em;
+  }
+
+  & li {
+    margin-bottom: var(--tight-spacing);
   }
 }
 
@@ -347,7 +351,7 @@ h2 {
   background-color: var(--background-color-primary);
   width: var(--page-width-constrained);
   padding: var(--fluid-spacing);
-  box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.1);
+  box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
 
@@ -367,6 +371,10 @@ h2 {
     color: var(--accent-color);
     font-weight: 700;
   }
+
+  & a:hover {
+    color: var(--accent-color-light);
+  }
 }
 
 .cv-category {
@@ -374,30 +382,49 @@ h2 {
 }
 
 .cv-item-header {
-  font-size: var(--step-1);
   display: flex;
   justify-content: space-between;
 }
 
 .cv-date {
   text-align: right;
-  font-weight: 700;
+  font-weight: 600;
   font-size: var(--step--1);
   color: var(--text-color-tertiary);
 }
 .cv-title {
-  font-weight: 700;
+  font-size: var(--step-1);
+  font-weight: 600;
 }
 
 .cv-institution {
-  color: var(--text-color-secondary);
-  font-weight: 400;
-  font-size: var(--step-0)
+  color: var(--text-color-tertiary);
+  font-weight: 600;
+  font-size: var(--step-0);
 }
 
 .cv-description {
   color: var(--text-color-secondary);
   font-size: var(--step--1);
+}
+
+.cv-lang-list {
+  display: flex;
+  justify-content: space-evenly;
+  font-weight: 400;
+  color: var(--text-color-secondary);
+  font-size: var(--step-0);
+
+  & li {
+    display: flex;
+    align-items: center;
+    gap: .5em;
+  }
+
+  & svg {
+    height: 2em;
+    width: 2em;
+  }
 }
 
 @media (max-width: 911px) {
