--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,13 @@ h3 {
   padding: 0.375rem 0;
 }
 
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: var(--page-width-wide);
+}
+
 .nav-navigation {
   display: flex;
   place-content: center;
@@ -145,7 +152,7 @@ h3 {
   content: '';
   position: absolute;
   left: 50%;
-  bottom: 5px;
+  bottom: 6px;
   width: 0%;
   height: 2px;
   background: var(--accent-color-light);
@@ -158,7 +165,7 @@ h3 {
 }
 
 .navbar-item:hover::after {
-  width: 60%;
+  width: 70%;
   transform: translateX(-50%);
 }
 
@@ -166,6 +173,11 @@ h3 {
   background-color: var(--white);
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
+.navbar-brand {
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 /* Styling by section*/
@@ -179,6 +191,12 @@ h3 {
   padding: 0 clamp(1rem, 5vw, 8rem);
   background-size: cover;
   color: var(--primary-color);
+
+  & svg {
+    aspect-ratio: 1;
+    height: 1em;
+    display: inline;
+  }
 
   & .header-content {
     text-align: left;
@@ -208,7 +226,7 @@ h3 {
   & #header-nombre {
     font-size: var(--step-3);
     font-weight: 800;
-    text-transform: uppercase;
+    text-transform: none;
   }
 }
 
@@ -438,9 +456,9 @@ h3 {
     width: 2em;
   }
 }
-/* About me section */
+/* Personal section */
 
-#about {
+#personal {
   background-color: var(--background-color-primary);
 
   & p {
@@ -448,7 +466,7 @@ h3 {
   }
 }
 
-.about-body {
+.personal-body {
   font-size: var(--step-0);
   width: var(--page-width-constrained);
 }
