--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ h2 {
 h3 {
   font-size: var(--step-2);
   text-align: center;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
 }
 
 /* Navbar */
@@ -257,29 +257,43 @@ h3 {
   margin-top: 1.5em;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.5em;
+  gap: 1rem;
   font-family: sans-serif;
   width: var(--page-layout-wide);
 }
 
 .project-card {
-  aspect-ratio: 4/3;
+  width: auto;
+  height: auto;
+  aspect-ratio: 4/7;
   display: flex;
-  gap: 1em;
   flex-direction: column;
-  place-items: center;
+  justify-content: stretch;
+  align-items: center;
   background-color: var(--white);
-  border: 1px solid rgba(0, 0, 0, 0.07);
+  border: 2px solid var(--background-color-tertiary);
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  border-radius: 4px;
-  padding: 1em;
+  border-radius: 10px;
+  padding: 0;
+}
 
-  & img {
-    width: 100%;
-    aspect-ratio: 4 / 3;
-    object-fit: cover;
-    border-radius: 4px;
-  }
+.project-image-container > img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.project-image-container {
+  width: 100%;
+  aspect-ratio: 4 / 3;
+  border-radius: 10px 10px 0 0;
+}
+
+.project-content {
+  border-radius: 0 0 10px 10px;
+  flex-grow: 1;
 }
 
 .section {
