--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,11 +62,11 @@ button {
   --step-5: clamp(2.4883rem, 1.5239rem + 4.8219vw, 5.2609rem);
 
   /* Spacing and sizing */
-  --content-width-constrained: clamp(360px, 90%, 900px);
-  --content-width-full: max(360px, 100%);
-  --page-layout-wide: clamp(360px, 95vw, 1200px);
-  --page-layout-default: clamp(360px, 95vw, 900px);
-  --page-layout-narrow: clamp(360px, 95vw, 640px);
+  --content-width-constrained: clamp(320px, 90%, 900px);
+  --content-width-full: max(320px, 100%);
+  --page-layout-wide: clamp(320px, 95vw, 1200px);
+  --page-layout-default: clamp(320px, 95vw, 900px);
+  --page-layout-narrow: clamp(320px, 95vw, 640px);
   --fluid-spacing: clamp(1rem, 5vw, 3rem);
   --spacing-m: clamp(0.75rem, 2vw, 1rem);
   --spacing-s: clamp(0.5rem, 1vw, 0.75rem);
@@ -119,7 +119,7 @@ h3 {
   right: 0px;
   background-color: var(--transparent-off-white);
   backdrop-filter: blur(15px);
-  padding: 0.375rem 0;
+  padding: var(--spacing-s) var(--spacing-m);
   z-index: 1;
 }
 
@@ -187,6 +187,7 @@ h3 {
 /* Header */
 
 #hero {
+  height: 100svh;
   justify-content: center;
   background-color: var(--background-color-primary);
   width: var(--content-width-full);
@@ -384,7 +385,7 @@ h3 {
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  padding: var(--spacing-m) 0;
+  padding: var(--spacing-m) var(--spacing-s);
   gap: var(--spacing-m);
 }
 
@@ -694,11 +695,16 @@ h3 {
 
 /* Viewport media queries */
 
-/* @media (max-width: 911px) {
-} */
+@media (max-width: 768px) {
+  .project-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 
 @media (max-width: 576px) {
-
+  .section {
+    min-height: unset;
+  }
   .nav-container {
     flex-direction: column;
     justify-content: stretch;
@@ -766,20 +772,19 @@ h3 {
   }
 
   .skill-card-container {
-  gap: 1rem;
-}
+    gap: 1rem;
+  }
 
   .skill-card-container.vertical {
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  max-height: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    max-height: 100%;
   }
 
   .skill-card {
-  width: auto;
-  background-color: unset;
-  box-shadow: none;
-}
-
+    width: auto;
+    background-color: unset;
+    box-shadow: none;
+  }
 }
