--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ h3 {
   background-color: var(--background-color-primary);
   width: var(--content-width-full);
   margin: 0 auto;
-  padding: 0 clamp(1rem, 5vw, 8rem);
+  padding: var(--spacing-m);
   background-size: cover;
   color: var(--primary-color);
 
@@ -211,10 +211,11 @@ h3 {
   }
 
   & .header-content {
+    flex: 1;
     text-align: left;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     gap: var(--spacing-m);
   }
@@ -247,6 +248,19 @@ h3 {
   }
 }
 
+.scroll-button {
+  font-size: var(--step-0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--text-color-primary);
+}
+
+.scroll-arrow {
+  aspect-ratio: 1;
+  width: 2rem;
+  flex: 1;
+}
 
 /* Portfolio */
 
@@ -602,9 +616,8 @@ h3 {
   animation-delay: 0.3s;
 }
 
-.slide-from-left {
-  opacity: 0;
-  transform: translateX(-50px);
+.delay-xl {
+  animation-delay: 0.5s;
 }
 
 .slide-from-left.is-visible {
@@ -612,44 +625,48 @@ h3 {
   animation-fill-mode: both;
 }
 
-.slide-from-right {
-  opacity: 0;
-  transform: translateX(50px);
-}
-
 .slide-from-right.is-visible {
   animation-name: SlideFromRight;
-  animation-fill-mode: both;
-}
-
-.slide-from-bottom {
-  opacity: 0;
-  transform: translateY(25px);
 }
 
 .slide-from-bottom.is-visible {
   animation-name: SlideFromBottom;
-  animation-fill-mode: both;
 }
 
-.rotate-icon {
+.slide-from-top.is-visible {
+  animation-name: SlideFromTop;
+}
+
+.rotate-icon.is-visible {
   animation-name: spinMe;
   animation-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
 }
 
-.pulse-effect {
-  animation: pulse 2s infinite ease-in-out;
+.fade-bounce.is-visible {
+  animation: fadeIn 0.5s ease-in 0.5s both,
+  bounce 2s ease-in-out 0.5s alternate infinite;
 }
 
 /* Animations */
 
-@keyframes pulse {
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes shadowPulse {
   0%,
   100% {
+    text-shadow: 0 0 0 0;
     transform: scale(1);
   }
   50% {
-    transform: scale(1.025);
+    text-shadow: 0 2px 10px var(--accent-color-light);
+    transform: scale(1.02);
   }
 }
 
@@ -701,17 +718,37 @@ h3 {
   }
 }
 
-@keyframes pulseDown {
-  0%,
-  100% {
-    transform: translateY(0px);
+@keyframes SlideFromTop {
+  from {
+    transform: translateY(-25px);
+    opacity: 0;
   }
 
-  50% {
-    transform: translateY(12px);
+  to {
+    transform: translateY(0px);
+    opacity: 1;
   }
 }
 
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.025);
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-4px);
+  }
+}
 /* Viewport media queries */
 
 @media (max-width: 768px) {
